--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,6 +12,8 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('name')}}">Name</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('add_user', name='Evans')}}">Add User</a>
         </li>
       </ul>
       <form class="d-flex">
